# auth_tutorial

./: .gitignore  CLIENT_TYPE_AUTH.md  CSRF_ANALYSIS.md  CSRF_PROTECTION.md  FINAL_ANSWER.md  PROBLEMS.md  README.md  SECURITY_EVALUATION.md  cookiecutter.json  db.sqlite3  debug_auth_order.py  debug_test_client.py  detailed_csrf_trace.py  final_csrf_analysis.py  main.py  pyproject.toml  pytest.ini  test_csrf_protection.py  verify_csrf_difference.py
auth_demo/: settings.py  urls.py
users/: adapters.py  authentication.py  core.py  mixins.py
users/api/v1/: views.py
users/tests/: README_TESTS.md  conftest.py  test_cookie_auth.py  test_email_verification.py  test_hybrid_auth.py  test_password_reset.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  schema.yaml
{{cookiecutter.project_slug}}/config/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/users/: GOALS.md  adapters.py  authentication.py  core.py  middleware.py  mixins.py
{{cookiecutter.project_slug}}/users/api/v1/: urls.py  views.py
{{cookiecutter.project_slug}}/users/api/v1/tests/: conftest.py  test_authorization.py  test_bearer_auth.py  test_cookie_auth.py  test_endpoints.py
